@@ -1,3 +1,6 @@
+2009-05-18 yusei
+* Fix some proxy fields. proxy_listbox_ids had to be copied to new proxified fields but it was not copied.
+
 2009-05-08 yusei
 * Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
 * Update dependencies.
